fai (3.3.1) unstable; urgency=low

  [ Thomas Lange ]
  * doc/Makefile: add target chunked

 -- Thomas Lange <lange@debian.org>  Fri, 13 Nov 2009 17:37:07 +0100

fai (3.3) unstable; urgency=low

  [ Thomas Lange ]
  * NEWS: add hint about missing packages in nfsroot, changes in
    dirinstall
  * control: update to standards version 3.8.3, no changes needed
  * sources.list,make-fai-nfsroot.conf: use Debian geo mirrors
  * README: use description from control file
  * subroutines-linux: fix log message
    remove yes pipe when calling debootstrap (closes: #539980)
    if NEXTTEST is used, define a class for next reboot. Thanks to
    Sebastian Hetze for this patch.
    task_updatebase now writes to software.log
    print warning when setup_harddisks is used
    include subroutines-linux into subroutines (closes: #494377)
  * subroutines: do not unset the functions task_$taskname after use
    fill task_tests with code, execute tests before task chboot
    create /var/run/sshd (needed for ubuntu 9.10)
    additional call to clean_exit in task_dirinstall
    include subroutines-linux into subroutines (closes: #494377)
    if two softupdates are running, print the name of the lock file
    set trap for softupdate after checking if second instance is running
    check if test.log exists before using grep
    add APT keys from package_config/*.asc files (closes: #363701,#504018)
    add keys after copying /etc/apt to /target, do not copy 10fai
    send correct message for faimond-gui before rebooting
  * fai-class: add string warning to message
  * task_sysinfo: call blkid on all disks
  * fcopy: add die() after open command
  * fcopy.8: improve info for calling postinst
  * fai-guide.sgml: add hint how to define classes on the kernel command
    line (closes: #497548), remove outdated information about
    /files/packages, add section about tests
  * ainsl: create missing path elements if -a is used (closes: #447199)