@@ -2,6 +2,8 @@ fai (3.3.1) unstable; urgency=low
 
   [ Thomas Lange ]
   * doc/Makefile: add target chunked
+  * Commands.pm: add ext4 support for tune2fs
+  * Fstab: do not fsck swap partitions
 
  -- Thomas Lange <lange@debian.org>  Fri, 13 Nov 2009 17:37:07 +0100
 
